--- a/src/pages/test/Test.module.css
+++ b/src/pages/test/Test.module.css
@@ -1,53 +1,11 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.root {
+  position: relative;
+  width: 1440px;
+  height: 810px;
+  align-items: flex-start;
+  background-color: #f3f5f6;
+  overflow: hidden;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  /* background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
-}
-
-.logo {
-  border-right: 1px solid gray;
-  justify-content: center;
-  display: flex;
-}
-
-.profile {
-  border-left: 1px solid gray;
-}
-
-.ant-layout-header {
-  padding: 0;
-  padding-inline: 0 !important;
-  background-color: white !important;
-}
-
-.ant-menu.ant-menu-inline-collapsed {
-  width: 100px;
-  border-right: 1px solid gray;
-}
-
-
 ._0_Navbar {
   position: absolute;
   left: 0;
@@ -95,7 +53,7 @@ body {
   margin-bottom: -1px;
   transform: matrix(0, -1, 1, 0, 0, 0);
 }
-/* .inputSearch {
+.inputSearch {
   width: 330px;
   height: 48px;
   align-items: center;
@@ -103,7 +61,7 @@ body {
   padding: 0 12px;
   border-radius: 2px;
   overflow: hidden;
-} */
+}
 .frame {
   width: 16px;
   height: 16px;
@@ -1833,5 +1791,3 @@ body {
   width: 100%;
   height: 100%;
 }
-
-
